@@ -261,4 +261,11 @@
       <m2-deploy-with-pom-template pom.xml="lib/lucene-xercesImpl-pom.xml.template"
                                    jar.file="lib/xercesImpl-2.9.1-patched-XERCESJ-1257.jar" />
     </target>
+
+    <target name="compile-test" depends="contrib-build.compile-test">
+       <!-- copy .alg files as resources for testing -->
+       <copy todir="${build.dir}/classes/test/conf">
+         <fileset dir="conf"/>
+       </copy>
+    </target>
 </project>
