@@ -53,7 +53,7 @@ log.queries=true
     { "Populate"
         CreateIndex
         { "MAddDocs" AddDoc > : 2000
-        ForcMerge(1)
+        ForceMerge(1)
         CloseIndex
     }
 
